--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
     padding: 0px;
     width: 100%;
     height: 100%;
-    background-color: deepskyblue;
+    background-color: rgb(26, 59, 70);
     position: absolute;
- 
 } 
+
+.nav-color {
+    background-color: #494473;
+}
 
 .puzzle {
     font-size: 20px;
@@ -19,5 +22,157 @@
 .title{
     font-size: 25px;
     font-weight: bold;
-    margin: 120px 0 55px 0;
+    margin: 120px 0 30px 0;
 }
+
+.footer {
+    position: relative;
+    top: 27em;
+}
+/******************************** Resize Boxes ***************************************/
+.puzzle-grid-drop1 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 350px;
+}
+
+.puzzle-grid-drop2 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 470px;
+}
+
+.puzzle-grid-drop3 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 590px;
+}
+
+ .puzzle-grid-drop4 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 350px;
+    top: 300px;
+}
+
+
+.puzzle-grid-drop5 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 470px;
+    top: 300px;
+}
+
+.puzzle-grid-drop6 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 590px;
+    top: 300px;
+}  
+
+
+.puzzle-grid-drop7 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 350px;
+    top: 407px;
+}
+
+
+.puzzle-grid-drop8 {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 470px;
+    top: 407px;
+}
+
+.puzzle-grid-drop9 {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    left: 590px;
+    top: 407px;
+}  
+
+
+/************************************* Resize image ****************************************/
+
+#img1-1-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 0px;
+    top: 300px;
+}  
+
+#img1-2-draggable {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    left: 121px;
+    top: 300px;
+}  
+
+#img1-3-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 242px;
+    top: 300px;
+}  
+
+#img3-1-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 363px;
+    top: 300px;
+}  
+
+#img3-2-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 484px;
+    top: 300px;
+}  
+
+#img3-3-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 605px;
+    top:  300px;
+}  
+
+#img2-1-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 726px;
+    top: 300px;
+}  
+
+#img2-2-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 847px;
+    top: 300px;
+}  
+
+#img2-3-draggable {
+    position: absolute;
+    width: 120PX;
+    height: 120px;
+    left: 968px;
+    top: 300px;
+}  
